--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Generator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="qrcode-solid.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -45,7 +46,7 @@
             if (event.key === "Enter") {
                 generateQR();
             }
-        });
+        }); 
 
     </script>
 
